# processing-of-project-applications

./: .env.example  .gitignore  docker-compose.prod.yaml  docker-compose.yml  products_import.xlsx  progress.md  progress.txt  tasks.json
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  exceptions.py  limiter.py  main.py  models.py
backend/app/api/: dictionaries.py  grouping.py  groups.py  projects.py
backend/app/repositories/: dictionary.py  group.py  project.py
backend/app/schemas/: compare.py  dictionary.py  excel_import.py  group.py  grouping.py  project.py
backend/app/services/: clustering.py  compare.py  dictionary.py  embedding.py  excel_export.py  excel_import.py  group.py  project.py
backend/app/tasks/: celery_app.py  embeddings.py  grouping.py  ping.py
backend/app/utils/: text.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_seed_dictionaries.py  003_update_projects.py  004_make_direction_trl_nullable.py  005_update_structure.py  006_add_stopwords.py
backend/tests/: conftest.py  test_celery.py  test_clustering.py  test_compare.py  test_dictionaries.py  test_embedding.py  test_export.py  test_grouping.py  test_groups.py  test_health.py  test_import.py  test_projects.py  test_rate_limiting.py  test_rejected_pairs.py
backup/: Dockerfile  RESTORE.md  backup.sh
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue
nginx/: Dockerfile  nginx.conf
prd/: PRD.md
scenarios/: e2e_scenario.md  generate_test_data.py  test_projects_50.xlsx
(+27 files in other folders)
