[project]
name = "ppa-backend"
version = "0.1.0"
description = "PPA Backend - Project Platform Analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "pymorphy3>=2.0.0",
    "numpy>=1.26.0",
    "slowapi>=0.1.9",
    "alembic-postgresql-enum>=1.3.0",
    "stop-words>=2018.7.23",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
